tests/parser/command_form/invalid_09.m.out
In invalid_09.m, line 5
|   a b % unexpected expression on a
|   ^ error: expected end of statement, found IDENTIFIER instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
