tests/parser/command_form/invalid_09.m
% (c) Copyright 2019 Florian Schanda

function invalid_09()
  wibble ....
  a b % unexpected expression on a
end
